--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
 
         <div class="btn">
-            <a href="yes.html" id = "move-random">Yes</a>
+            <a href="yes.html">Yes</a>
             <a href="#" id="move-random">NO</a>
         </div>
     </div>
